# DownloadAutomater

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  UIRenderer.hpp  data.json  downloader.hpp  initializeData.hpp  main.cpp  recoverPlaylist.py  recoverPlaylistData.txt  schemaForData.json  tests.hpp
.github/ISSUE_TEMPLATE/: ChannelRequest.yaml  VideoRequest.yaml  channel-request.md
data/: archive.links.txt  archive.names.txt  channels.tracked.json  downloader.args.json  executable.opts.json  generateArchiveNames.py  schema.channels.tracked.json  schema.downloader.args.json
oldSrc/: badFileNameException.hpp  badUrlFormException.cpp  badUrlFormException.hpp  channels.cpp  downloader.cpp  downloader.hpp  execDataOptions.cpp  execOptions.cpp  execOptions.hpp  exitCode.hpp  fileErrorException.cpp  fileErrorException.hpp  json.hpp  keyValuePairMismatchException.hpp  main.cpp  playlist.cpp  playlist.hpp  threadUtilities.cpp  threadUtilities.hpp  trie.cpp  trie.hpp
scripts/: generateArchiveNamesFromSrc.py  jsonNameCreator.py
src/: badFileNameException.cpp  badFileNameException.hpp  channels.cpp  channels.hpp  downloader.cpp  execDataOptions.cpp  execDataOptions.hpp  execOptions.cpp  execOptions.hpp  exitCode.hpp  json.hpp  jsonKeyValueNotFoundException.cpp  jsonKeyValueNotFoundException.hpp  keyValuePairMismatchException.cpp  keyValuePairMismatchException.hpp  main.cpp  threadUtilities.cpp  threadUtilities.hpp  trie.cpp  trie.hpp
src/configuration/: dataPaths.cpp  dataPaths.hpp  directories.cpp  directories.hpp  handler.cpp  handler.hpp
src/exceptions/: badUrlForm.cpp  badUrlForm.hpp  directory.cpp  directory.hpp  fileNotFound.cpp  fileNotFound.hpp  jsonic.cpp  jsonic.hpp
src/structures/: channels.cpp  channels.hpp
src/utils/: constants.hpp  exitCode.hpp  miscFunctions.cpp  miscFunctions.hpp
